Crear archivo index.html inicial
Agrego contenido inicial al index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>NTS – Network Technical Solutions</title>
+</head>
+<body>
+  <h1>NTS – Network Technical Solutions</h1>
+  <p>Profesionales a su servicio, con el calor humano que nos distingue</p>
+</body>
+</html>
